@@ -1,4 +1,6 @@
+################################################################################
 # Process this file with autoconf to produce a configure script.
+################################################################################
 
 AC_INIT([freealut library], [1.0.0], [openal-devel@opensource.creative.com], [freealut])
 AC_CONFIG_AUX_DIR([admin/autotools])
@@ -10,7 +12,10 @@ AC_CONFIG_HEADERS([config.h])
 # Compatibility hack for older autoconf versions
 m4_ifdef([AS_HELP_STRING], [], [AC_DEFUN([AS_HELP_STRING], [AC_HELP_STRING($][@)])])
 
+################################################################################
 # Checks for programs.
+################################################################################
+
 AC_PROG_CC
 AC_C_CONST
 ALUT_C__ATTRIBUTE__
@@ -32,10 +37,16 @@ AC_DEFINE([ALUT_BUILD_LIBRARY], [1], [Define to 1 if you want to build the ALUT 
 AC_SEARCH_LIBS([pthread_self], [pthread])
 AC_SEARCH_LIBS([alGetError], [openal32 openal])
 
+################################################################################
 # Checks for header files.
+################################################################################
 
 # We could possibly need struct timespec and random(), which are not ANSI.
-AM_CFLAGS="-D_XOPEN_SOURCE=500"
+# Furthermore, without __NO_CTYPE tolower and friends are macros which introduce
+# a GLIBC 2.3 dependency. By defining this identifier we are currently backwards
+# compatible to GLIBC 2.1.3, which is a good thing. In addition, the macros lead
+# to code which triggers warnings with -Wunreachable-code.
+AM_CFLAGS="-D_XOPEN_SOURCE=500 -D__NO_CTYPE"
 AC_SUBST([AM_CFLAGS])
 
 AC_HEADER_STDC
@@ -63,15 +74,57 @@ ALUT_CHECK_FUNC([[@%:@include <sys/types.h>
 AC_CHECK_LIBM
 AC_SUBST([LIBM])
 
+################################################################################
 # Build time configuration.
+################################################################################
 
 AC_ARG_ENABLE([warnings],
 [AS_HELP_STRING([--enable-warnings],
                 [enable pedantic compiler warnings @<:@default=yes@:>@])])
 
 if test "x$enable_warnings" != xno; then
+  # Doing it in two steps gives a nicer message...
   AX_CFLAGS_WARN_ALL_ANSI([flags])
   AM_CFLAGS="$AM_CFLAGS $flags"
+fi
+
+AC_ARG_ENABLE([more-warnings],
+[AS_HELP_STRING([--enable-more-warnings],
+                [enable even more compiler warnings @<:@default=no@:>@])])
+
+if test "x$enable_more_warnings" = xyes; then
+  if test "x$enable_warnings" = xno; then
+    AC_MSG_WARN([--enable-more-warnings ignored because of --disable-warnings])
+  elif test "x$GCC" != xyes; then
+    AC_MSG_WARN([--enable-more-warnings ignored because no GCC was detected])
+  else
+    # The long list of warning options below contains every GCC warning option
+    # which is not automatically enabled with -Wall. The only exceptions to this
+    # rule are:
+    #
+    #    -Wpadded:
+    #      Perhaps good for optimizing out data layout, but not in general.
+    #
+    #    -Wconversion:
+    #      Passing e.g. float as an argument is fine, we always have prototypes.
+    #
+    # Note that some older GCC versions give false positives about unreachable
+    # code.
+    AM_CFLAGS="$AM_CFLAGS -W -Waggregate-return -Wbad-function-cast -Wcast-align -Wcast-qual -Wdisabled-optimization -Wendif-labels -Wfloat-equal -Winline -Wlong-long -Wmissing-declarations -Wmissing-format-attribute -Wmissing-noreturn -Wmissing-prototypes -Wnested-externs -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wsign-compare -Wstrict-prototypes -Wundef -Wunreachable-code -Wwrite-strings"
+
+    # Check for GCC 4.x-only warning options.
+    ALUT_CHECK_FLAG([-Wdeclaration-after-statement],
+                    [AM_CFLAGS="$AM_CFLAGS -Wdeclaration-after-statement"])
+    ALUT_CHECK_FLAG([-Winvalid-pch],
+                    [AM_CFLAGS="$AM_CFLAGS -Winvalid-pch"])
+    ALUT_CHECK_FLAG([-Wmissing-field-initializers],
+                    [AM_CFLAGS="$AM_CFLAGS -Wmissing-field-initializers"])
+    # We cheat here a bit: The code generated by AC_LANG_PROGRAM triggers a
+    # warning with -Wold-style-definition, so we assume that this flag is
+    # supported whenever -Wvariadic-macros is.
+    ALUT_CHECK_FLAG([-Wvariadic-macros],
+                    [AM_CFLAGS="$AM_CFLAGS -Wvariadic-macros -Wold-style-definition"])
+  fi
 fi
 
 AC_ARG_ENABLE([werror],
@@ -88,7 +141,10 @@ if test "x$enable_werror" = xyes; then
   fi
 fi
 
+################################################################################
 # Generate output.
+################################################################################
+
 AC_CONFIG_FILES([Makefile
                  examples/Makefile
                  include/Makefile
